2012-01-24 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php
	 include/graphs/functions_pchart.php: Added units in Y axis and 
	 fixed min, max and avg values. Also fixed colors fo min, max and
	 avg series.
	 
	Pending task: #3153343


2012-01-24  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_config.php,
	  include/functions_netflow.php,
	  pandoradb.sql,
	  pandoradb.postgreSQL.sql,
	  pandoradb.oracle.sql,
	  operation/netflow/nf_live_view.php,
	  extras/pandoradb_migrate_4.0.x_to_4.1.mysql.sql,
	  extras/pandoradb_migrate_4.0.x_to_4.1.oracle.sql,
	  extras/pandoradb_migrate_4.0.x_to_4.1.postgreSQL.sql,
	  godmode/agentes/module_manager_editor_prediction.php,
	  godmode/agentes/configurar_agente.php,
	  godmode/menu.php,
	  godmode/netflow/nf_edit_form.php: Added support for enterprise
	  netflow modules.

	* godmode/netflow/nf_manage.php: Moved to
	  godmode/setup/setup_netflow.php.

	* godmode/netflow/nf_option_form.php: Removed from repository. Not used.

2010-01-24 Javier Lanz <javier.lanz@artica.es>
	* godmode/massive/massive_delete_modules.php: Fixed a small entities
	bug. Added io_safe_output

2012-01-23 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* pandoradb.sql
	 pandoradb.postgreSQL.sql
 	 pandoradb.oracle.sql
 	 extras/pandoradb_migrate_4.0.x_to_4.1.mysql.sql
	 extras/pandoradb_migrate_4.0.x_to_4.1.oracle.sql
	 extras/pandoradb_migrate_4.0.x_to_4.1.postgreSQL.sql: Modified
	 tagente table.
 	
	* operation/agentes/estado_generalagente.php
	 operation/agentes/url_address.php
	 operation/agentes/ver_agente.php
	 godmode/agentes/agent_incidents.php
	 godmode/agentes/configurar_agente.php
	 godmode/agentes/agent_manager.php: Added url_address functionality.

	Pending task: #3472445

2012-01-23  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_netflow.php: Aesthetic fixes to netflow report
	  tables.

2012-01-23  Ramon Novoa  <rnovoa@artica.es>

	* operation/menu.php,
	  operation/netflow/nf_live_view.php,